Terminado el bloque de visibilidad y clickeo de editar y remover, solo queda un bug y ya

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     cursor: pointer;
 }
 .invisible {
-    visibility: hidden!important;
+    visibility: hidden;
 }
 .grid {
     display: grid;
